feat: mkdocs-jupyter pt3

--- a/docs/demos/runtime-interoperability.ipynb
+++ b/docs/demos/runtime-interoperability.ipynb
@@ -34,33 +34,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/ashenfad/git/tic/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import plotly.express as px\n",
         "import sqlite3\n",
         "from IPython.display import display\n",
-        "from agex import Agent, Versioned, clear_agent_registry, events\n",
+        "from agex import Agent, Versioned, events\n",
         "from agex.helpers import register_pandas \n",
         "from agex.llm import DummyLLMClient\n",
         "from plotly.graph_objects import Figure\n",
         "from examples.db_primer import PRIMER\n",
         "\n",
         "# Our helpers for demo setup and canned responses\n",
-        "from examples.notebook.helper import create_in_memory_db, DB_QUERY_RESPONSE, VISUALIZATION_RESPONSE\n",
+        "from examples.notebook.helper import (\n",
+        "    create_in_memory_db, \n",
+        "    DB_QUERY_RESPONSE, \n",
+        "    VISUALIZATION_RESPONSE\n",
+        ")\n",
         "\n",
-        "db_connection = create_in_memory_db()\n"
+        "db_connection = create_in_memory_db()\n",
+        "\n",
+        "# create persistent state for the agents & their computational workspaces\n",
+        "state = Versioned()"
       ]
     },
     {
@@ -80,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -92,27 +90,28 @@
         "\n",
         "# Give the agent access to the live database connection\n",
         "db_expert.module(\n",
-        "    db_connection,  # we register instance methods just like we do for module fns\n",
-        "    name=\"db\",  # name is required when registering instance methods\n",
+        "    db_connection,\n",
+        "    name=\"db\",\n",
         "    include=[\"execute\", \"executemany\", \"commit\"],\n",
         ")\n",
         "\n",
-        "# also register the Cursor class for gathering results\n",
-        "db_expert.cls(sqlite3.Cursor, include=[\"fetchone\", \"fetchall\", \"fetchmany\", \"description\"])\n",
+        "# register the Cursor class for gathering results\n",
+        "db_expert.cls(sqlite3.Cursor, include=[\"fetchone\", \"fetchall\", \"description\"])\n",
         "\n",
         "# use the pre-existing helper to register pandas\n",
         "register_pandas(db_expert)\n",
         "\n",
+        "# define a task for our agent, the fn signature acts as a contract\n",
         "@db_expert.task\n",
         "def get_data(prompt: str) -> pd.DataFrame: # type: ignore[return-value]\n",
         "    \"\"\"Runs a SQL query and returns the result as a pandas DataFrame.\"\"\"\n",
         "    pass\n",
         "\n",
-        "# create persistent state for the agents & their computational workspaces\n",
-        "state = Versioned()\n",
-        "\n",
-        "# Let's ask the agent to get the sales data for umbrellas.\n",
-        "sales_df = get_data(prompt=\"Please give me all availble umbrella sales by day\", state=state)\n"
+        "# now we ask the agent to get the sales data for umbrellas.\n",
+        "sales_df = get_data(\n",
+        "    prompt=\"Find all available umbrella sales by day\",\n",
+        "    state=state,\n",
+        ")"
       ]
     },
     {
@@ -132,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -267,7 +266,7 @@
         }
       ],
       "source": [
-        "display(sales_df)\n"
+        "display(sales_df)"
       ]
     },
     {
@@ -285,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -299,7 +298,7 @@
       "source": [
         "viz_expert = Agent(\n",
         "    name=\"viz_expert\",\n",
-        "    primer=\"You are an expert at creating plots from pandas DataFrames using plotly express.\"\n",
+        "    primer=\"You are an expert at creating plots.\"\n",
         ")\n",
         "viz_expert.llm_client = DummyLLMClient(responses=[VISUALIZATION_RESPONSE])\n",
         "\n",
@@ -314,7 +313,11 @@
         "\n",
         "# Let's ask the agent to plot the DataFrame we got from the first agent.\n",
         "print(\"Passing the DataFrame to the Visualization Expert...\")\n",
-        "sales_plot = plot_dataframe(\"Please show me overlayed yearly sales cycles\", sales_df, state=state)\n"
+        "sales_plot = plot_dataframe(\n",
+        "    \"Please show me overlayed yearly sales cycles\",\n",
+        "    sales_df,\n",
+        "    state=state\n",
+        ")"
       ]
     },
     {
