doc: interop notebook improvements

--- a/docs/demos/runtime-interoperability.ipynb
+++ b/docs/demos/runtime-interoperability.ipynb
@@ -32,30 +32,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/ashenfad/git/tic/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import plotly.express as px\n",
         "import sqlite3\n",
         "from IPython.display import display\n",
         "from plotly.graph_objects import Figure\n",
-        "from agex import Agent, Versioned, events\n",
+        "from agex import Agent\n",
         "from agex.helpers import register_pandas, register_plotly\n",
         "from examples.db_primer import PRIMER\n",
         "\n",
         "# Our helpers for demo setup\n",
-        "from examples.notebook.helper import create_in_memory_db\n",
+        "from examples.notebook.helper import create_in_memory_db, SETUP_ACTION\n",
         "\n",
         "db_connection = create_in_memory_db()"
       ]
@@ -75,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -657,26 +647,15 @@
         "# use the pre-existing helper to register pandas\n",
         "register_pandas(db_expert)\n",
         "\n",
-        "# by taking an inital action for the agent, we can give it a head start,\n",
-        "# otherwise we'd spend an extra LLM call deciding to explore the schema\n",
-        "SETUP_ACTION = \"\"\"\n",
-        "# find columns in the sales table\n",
-        "columns_info = db.execute(\"PRAGMA table_info(sales)\").fetchall()\n",
-        "columns = [col[1] for col in columns_info]\n",
-        "\n",
-        "# find distinct product names\n",
-        "distinct_products = db.execute(\"SELECT DISTINCT product_name FROM sales\").fetchall()\n",
-        "product_names = [row[0] for row in distinct_products]\n",
-        "\n",
-        "task_continue(\"Columns in 'sales' table:\", columns, \"Distinct product_names:\", product_names)\n",
-        "\"\"\"\n",
-        "\n",
+        "# define the task signature, and help the agent with an initial action\n",
+        "# to explore the schema, this helps us avoid an extra LLM call where the\n",
+        "# agent would decide to explore the schema\n",
         "@db_expert.task(setup=SETUP_ACTION)\n",
         "def get_data(prompt: str) -> pd.DataFrame: # type: ignore[return-value]\n",
         "    \"\"\"Runs a SQL query and returns the result as a pandas DataFrame.\"\"\"\n",
         "    pass\n",
         "\n",
-        "# Let's ask the agent to get the sales data for umbrellas.\n",
+        "# Let's ask the agent to get the sales data for umbrellas\n",
         "sales_df = get_data(\"Please give me umbrella sales by day\", on_event=display)"
       ]
     },
@@ -706,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1152,7 +1131,7 @@
         "    primer=\"You are an expert at creating plots from pandas DataFrames using plotly express.\"\n",
         ")\n",
         "\n",
-        "# Give the agent access to the plotly express library\n",
+        "# Give the agent access to plotly and pandas\n",
         "register_plotly(viz_expert)\n",
         "register_pandas(viz_expert)\n",
         "\n",
