doc: routy tweaks

--- a/docs/examples/routy.ipynb
+++ b/docs/examples/routy.ipynb
@@ -57,12 +57,9 @@
     "    configure={\n",
     "        # elevate for high visibility\n",
     "        \"geocoder.geocode\": MemberSpec(visibility=\"high\"),\n",
-    "        \"geocoder.geocode_to_gdf\": MemberSpec(visibility=\"high\"),\n",
-    "        \"graph.graph_from_point\": MemberSpec(visibility=\"high\"),\n",
     "        \"graph.graph_from_bbox\": MemberSpec(visibility=\"high\"),\n",
     "        \"distance.nearest_nodes\": MemberSpec(visibility=\"high\"),\n",
     "        \"distance.nearest_edges\": MemberSpec(visibility=\"high\"),\n",
-    "        \"distance.great_circle\": MemberSpec(visibility=\"high\"),\n",
     "        \"routing.shortest_path\": MemberSpec(visibility=\"high\"),\n",
     "        \"routing.k_shortest_paths\": MemberSpec(visibility=\"high\"),\n",
     "        \"routing.route_to_gdf\": MemberSpec(visibility=\"high\"),\n",
@@ -588,8 +585,7 @@
     "\n",
     "# Alternative 1: Avoid US-20\n",
     "patterns_us20 = ['US 20', 'US-20', 'US20', 'HWY 20', 'OR 20', 'OR-20', 'OR20']\n",
-    "H1, route1, removed1 = compute_route_avoiding(G, orig_node, dest_node, [p.upper() for p in patterns_us20])\n",
-    "...\n",
+    "H1, route1, removed1 = compute_route_avoiding(G, orig_node, dest_node, patterns_us20)\n",
     "```\n",
     "\n",
     "All this possible without the hassle of pre-defining tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation."
