doc: routy tweaks pt2

--- a/docs/examples/routy.ipynb
+++ b/docs/examples/routy.ipynb
@@ -563,9 +563,9 @@
    "source": [
     "Great, the agent found two viable alternatives!\n",
     "\n",
-    "Under the hood, the agent is downloading openstreetmap data, geocoding locations, searching for viable routes, and then converting routes into plottable polylines. Its a considerable amount of work.\n",
+    "Under the hood, the agent is downloading openstreetmap data, geocoding locations, searching for best routes, and then converting routes into plottable polylines. It's a considerable amount of work.\n",
     "\n",
-    "Excitingly, agents often end up creating their own helper fns. When using stateful task calls, these helpers survive and an agent may reuse them (building their own toolset!).\n",
+    "Excitingly, agents often end up creating their own helper fns. When using stateful task calls, these helpers persist and an agent may reuse them (building their own toolset!).\n",
     "\n",
     "```python\n",
     "# Helper: compute shortest path while avoiding edges with certain patterns in name\n",
@@ -588,7 +588,7 @@
     "H1, route1, removed1 = compute_route_avoiding(G, orig_node, dest_node, patterns_us20)\n",
     "```\n",
     "\n",
-    "All this possible without the hassle of pre-defining tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation."
+    "All this possible without the hassle of pre-defining a tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation."
    ]
   }
  ],
