doc: routy link ipynb to py

--- a/docs/examples/routy.ipynb
+++ b/docs/examples/routy.ipynb
@@ -588,7 +588,9 @@
     "H1, route1, removed1 = compute_route_avoiding(G, orig_node, dest_node, patterns_us20)\n",
     "```\n",
     "\n",
-    "All this possible without the hassle of pre-defining a tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation."
+    "All this possible without the hassle of pre-defining a tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation.\n",
+    "\n",
+    "See the full original python here: [routy.py](https://github.com/ashenfad/agex/blob/main/examples/routy.py)"
    ]
   }
  ],
