doc: routy notebook story

--- a/docs/examples/routy.ipynb
+++ b/docs/examples/routy.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this demo we'll use two nifty but lesser known Python libraries ([OSMnx](https://github.com/gboeing/osmnx) & [Folium](https://github.com/python-visualization/folium)) to make an agent that helps find travel routes and plots them.\n",
     "\n",
-    "This is a more difficult task than some of our other examples, so we'll make use of GPT5."
+    "This is a more difficult task than some of our other examples, so we'll make use of GPT-5."
    ]
   },
   {
@@ -110,9 +110,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's call this new task function.\n",
+    "Now let's call this new task function.\n",
     "\n",
-    "First we'll create a `Versioned` state so that our agent has memory accross task calls."
+    "We'll include a `Versioned` state in the call so that our agent has memory accross tasks."
    ]
   },
   {
@@ -565,7 +565,11 @@
     "\n",
     "Under the hood, the agent is downloading openstreetmap data, geocoding locations, searching for best routes, and then converting routes into plottable polylines. It's a considerable amount of work.\n",
     "\n",
-    "Excitingly, agents often end up creating their own helper fns. When using stateful task calls, these helpers persist and an agent may reuse them (building their own toolset!).\n",
+    "But how did it handle the \"avoid Hwy 20\" constraint?\n",
+    "\n",
+    "We were rude. We never gave the agent a tool or any hints for avoiding specific roads. Instead, when faced with this requirement, the agent invented its own tool on the fly by composing primitives from the OSMnx library. It wrote a new helper to filter the road network graph before finding the shortest path.\n",
+    "\n",
+    "Here is the actual helper function:\n",
     "\n",
     "```python\n",
     "# Helper: compute shortest path while avoiding edges with certain patterns in name\n",
@@ -588,9 +592,9 @@
     "H1, route1, removed1 = compute_route_avoiding(G, orig_node, dest_node, patterns_us20)\n",
     "```\n",
     "\n",
-    "All this possible without the hassle of pre-defining a tooling layer on top of OSMnx or Folium. Instead, the agent stitches them together using the guidance already available within the libraries' documentation.\n",
+    "The benefit is two-fold. First, we avoided the need to write new tooling layers for OSMnx & Folium. The agent learns what it needs just from fn sigs and existing docs. Second, by giving the agent a set of primitives it has more space to be creative when solving unexpected problems.\n",
     "\n",
-    "See the full original python here: [routy.py](https://github.com/ashenfad/agex/blob/main/examples/routy.py)"
+    "This approach is asking a little more from our agents. But as the example above shows, they're often up to the challenge."
    ]
   }
  ],
