--- a/docs/examples/routing.ipynb
+++ b/docs/examples/routing.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
    ],
    "source": [
     "state = Versioned()\n",
-    "map = route(\"I'd like drive from Albany, OR to Corvallis, OR\", state=state)\n",
+    "map = route(\"I'd like to drive from Albany, OR to Corvallis, OR\", state=state)\n",
     "display(map)"
    ]
   },
